Refactor tracks recommendations shuffling